# billy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: .gitkeep  credit_domino_pipeline.py
data/prosper_user_loans_2016/: gprops.csv  nodes.csv
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: risk_band.sql
dbt/models/: schema.yml
dbt/models/marts/: fct_credit_features.sql  fct_scoring_log.sql
dbt/models/staging/: stg_customers.sql  stg_graph_features.sql  stg_relationships.sql
infra/: airflow.Dockerfile  init.sql  prometheus.yml
infra/grafana/: dashboard.json  provisioning-dashboards.yml
scripts/: demo_walkthrough.sh  prepare_credit_data.py  run_hybrid.py  train_model.py
src/credit_domino/: config.py  logging.py
src/credit_domino/api/: __init__.py
src/credit_domino/dashboard/: app.py
src/credit_domino/data/: loaders.py  prosper_loader.py
src/credit_domino/graph/: features.py  loader.py
src/credit_domino/modeling/: evaluate.py  gnn.py  register.py  train.py
src/credit_domino/monitoring/: drift.py
src/credit_domino/simulation/: domino.py
tests/api/: test_scoring_api.py
tests/data/: test_data_loading.py
tests/dbt/: test_dbt_compilation.py
tests/graph/: test_graph_features.py
tests/modeling/: test_training_pipeline.py
tests/monitoring/: test_drift.py
tests/simulation/: test_domino.py
tests/smoke/: test_config.py  test_logging.py  test_repo_bootstrap.py
