[project]
name = "credit-domino"
version = "1.0.0"
description = "Credit risk system with graph-based contagion simulation"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0,<0.118.0",
    "uvicorn[standard]>=0.41.0",
    "xgboost>=3.2.0",
    "shap>=0.51.0",
    "scikit-learn>=1.8.0",
    "pandas>=2.3.3,<3",
    "numpy>=2.4.2",
    "neo4j>=6.1.0",
    "mlflow>=3.10.1",
    "sqlalchemy>=2.0.48",
    "psycopg2-binary>=2.9.11",
    "clickhouse-connect>=0.13.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
    "evidently>=0.7.20",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "streamlit>=1.55.0",
    "pyvis>=0.3.2",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]
airflow = [
    "apache-airflow>=3.1",
]
dbt = [
    "dbt-core>=1.11.7",
    "dbt-postgres>=1.10.0",
    "dbt-clickhouse>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_domino"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# ML convention: X, X_train, X_test, G are standard names
"src/credit_domino/modeling/*" = ["N803", "N806"]
"src/credit_domino/graph/*" = ["N803", "N806"]
"src/credit_domino/simulation/*" = ["N803", "N806"]
"src/credit_domino/api/*" = ["N806"]
"tests/modeling/*" = ["N806"]
"tests/simulation/*" = ["N806"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
